--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
+  "_fliplog": [
+    "cli",
+    "fun",
+    "latest"
+  ],
   "name": "fliplog",
-  "version": "0.1.28",
+  "version": "0.2.0-beta.18",
   "main": "index.js",
   "description": "fluent logging with verbose insight, colors, tables, emoji, filtering, spinners, progress bars, timestamps, capturing, stack traces, clearing, & presets",
   "keywords": [
@@ -24,54 +29,52 @@
   ],
   "files": [
     "index.js",
-    "emoji-by-name.js",
-    "filter.js",
-    "progress.js",
-    "Spinner.js",
-    "examples.js",
-    "debugFor.js"
+    "config.js",
+    "tagged.js",
+    "deps",
+    "middleware",
+    "plugins"
+  ],
+  "directories": [
+    "deps",
+    "middleware",
+    "plugins"
   ],
   "scripts": {
     "test": "node ./test/examples && node ./test/test",
-    "test-all": "node ./test/examples && node ./test/test && node test/boxen && node test/filter && node test/progress && node test/slow && node test/formatter && node test/from && node test/quick"
+    "test-all": "node ./test/examples && node ./test/test && node test/boxen && node test/filter && node test/progress && node test/slow && node test/formatter && node test/from && node test/quick",
+    "prepublish": "echo {} > ./deps/cache.json",
+    "magicpublish": "node ./dynamicTags.js",
+    "postinstall": "node ./index.js --postinstallcall",
+    "test-flags": "node ./test/flags.js"
   },
   "engines": {
     "node": ">= 7.8.0",
     "npm": ">= 4.2.0"
   },
-  "optionalDependencies": {
-    "cli-spinners": "^1.0.0"
+  "testingDependencies": {
+    "clear-require": "*",
+    "benchmark": "*"
+  },
+  "_optionalDependencies": {
+    "cli-spinners": "^1.0.0",
+    "lodash.padend": "4.6.1",
+    "read-pkg-up": "2.0.0"
   },
   "devDependencies": {
-    "cli-highlight": "^1.1.4",
-    "boxen": "^1.0.0",
-    "sparkly": "^3.1.2",
-    "babar": "^0.1.0",
-    "beeper": "1.1.1",
-    "listr": "0.11.0"
+    "javascript-stringify": "^1.6.0"
   },
   "dependencies": {
+    "app-root-path": "^2.0.1",
     "chalk": "^1.1.3",
-    "cli-color": "^1.2.0",
-    "cli-table2": "^0.2.0",
-    "deep-diff": "0.3.4",
     "expose-hidden": "*",
     "flipchain": "*",
-    "fliptime": "*",
     "inspector-gadget": "*",
-    "javascript-stringify": "^1.6.0",
-    "lodash.clonedeep": "4.5.0",
-    "lodash.padend": "4.6.1",
-    "multispinner": "^0.2.1",
-    "node-notifier": "^5.1.2",
-    "ora": "1.2.0",
     "pretty-error": "^2.0.2",
-    "prettyjson": "1.2.1",
-    "progress": "1.1.8",
-    "sleepfor": "*",
     "to-arr": "*",
     "tosource": "^1.0.0"
   },
+  "license": "MIT",
   "author": "James <aretecode@gmail.com>",
   "homepage": "https://github.com/fliphub/fliplog",
   "repository": {
