--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "latest"
   ],
   "name": "fliplog",
-  "version": "0.3.0",
+  "version": "0.3.0-beta.5",
   "main": "index.js",
   "description": "fluent logging with verbose insight, colors, tables, emoji, filtering, spinners, progress bars, timestamps, capturing, stack traces, clearing, & presets",
   "keywords": [
@@ -36,7 +36,8 @@
     "plugins/",
     "deps",
     "middleware",
-    "plugins"
+    "plugins",
+    "modules"
   ],
   "directories": [
     "deps",
